2004-04-21 Michael Bunk <kleinerwurm@gmx.net>

	* updated release to 0.0.2 by converting with new
	converter into dictd database format, hopefully
	solving bug #920850 @ sourceforge

	* moved from TEI P3 (SGML) to TEI P4 (XML)
