@@ -1,0 +1,11 @@
+English-Hungarian Dictionary
+============================
+
+This dictionary is derived from a dictionary hosted at
+<http://almos.vein.hu/~vonyoa/AINDEX.HTM>. Since upstream since inactive, the
+dictionary has been converted from a binary format to TEI P5 and is open for
+corrections and improvements.
+
+If you want to extract the old dictionary, you need dbview. The Makefile in this
+directory should help you getting started.
+
