@@ -1,0 +1,1 @@
+../shared/freedict-dictionary.css
