@@ -1,0 +1,1 @@
+../shared/freedict-P5.dtd
