@@ -1,3 +1,8 @@
+2017-02-19 Sebastian Humenda <shumenda |at| gmx /dot/ de>
+
+	* "free" dictionary from binary format; upstream seems inactive and hence
+		we're opening the dictionary for corrections
+
 2014-02-16 Michael Bunk <kleinerwurm@gmx.net>
 
     * Attempt to fix Debian #759952: FTBFS: hun-eng.tei:69: parser error : Premature end of data in tag body line 67
