@@ -1,3 +1,8 @@
+2017-02-19 Sebastian Humenda <shumenda |at| gmx /dot/ de>
+
+	* "free" dictionary from binary format; upstream seems inactive and hence
+		we're opening the dictionary for corrections
+
 2004-04-21 Michael Bunk <kleinerwurm@gmx.net>
 
 	* updated release to 0.0.2 by converting with new
